Add Unit Of Work and Generic Repository

--- a/MVC-CoreWithEF-Core/MVC_CoreWithEF_Core.csproj
+++ b/MVC-CoreWithEF-Core/MVC_CoreWithEF_Core.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DB.Core\DB.Core.csproj" />
+    <ProjectReference Include="..\ServiceLayer\ServiceLayer.csproj" />
   </ItemGroup>
 
 </Project>
